--- a/public/styles.css
+++ b/public/styles.css
@@ -1,15 +1,15 @@
 body {
     background-color: rgb(87, 87, 87);
-    font-family: Calibri, sans-serif
+    font-family: Calibri, sans-serif;
+}
+
+#heading {
+    font-size: 45px;
 }
 
 .row {
     background-color: rgb(168, 168, 168);
 }
-
-/* .col-6 {
-    background-color: rgba(0, 0, 255, 0.308);
-} */
 
 .mb-2 {
     background-color: rgba(85, 85, 85, 0.171);
